--- a/static/styles/_fleet.scss
+++ b/static/styles/_fleet.scss
@@ -164,6 +164,14 @@
 
       .form-group {
         margin-top: 20px;
+        
+        .flag-icon{
+          font-size: 30px;
+          display: none;
+        }
+        .active{
+          display: block;
+        }
 
         label {
           display: block;
