--- a/static/styles/_home.scss
+++ b/static/styles/_home.scss
@@ -264,6 +264,13 @@ header {
 
         .form-group {
           margin-top: 20px;
+          .flag-icon{
+            font-size: 30px;
+            display: none;
+          }
+          .active{
+            display: block;
+          }
 
           label {
             display: block;
@@ -434,6 +441,14 @@ header {
 
         .form-group {
           margin-top: 20px;
+
+          .flag-icon{
+            font-size: 30px;
+            display: none;
+          }
+          .active{
+            display: block;
+          }
 
           label {
             display: block;
