--- a/promotion/templates/fleet.html
+++ b/promotion/templates/fleet.html
@@ -229,7 +229,7 @@
                     {% endif %}
                 {% endwith %}
         
-                <div style="width: 25%; margin:5px 10px;">
+                <div class="country_code_input">
                     {{ fleetform.country_code }}
                 </div>
                   {{ fleetform.phone }}
@@ -366,7 +366,7 @@
             {% endif %}
           {% endwith %}
             
-            <div style="width: 25%; margin:5px 10px;">
+            <div class="country_code_input">
                 {{ tourform.country_code }}
             </div>
             {{ tourform.phone }}
