our advantages style changed

--- a/promotion/templates/index.html
+++ b/promotion/templates/index.html
@@ -686,37 +686,37 @@
     <div class="custom-container">
       <div class="row row-gap-5">
         <div class="col-lg-4 col-md-6 col-12">
-          <div class="box d-flex">
+          <div class="box d-flex align-items-center">
             <i class="fa-solid fa-clock-rotate-left"></i>
             <h6>{% trans "Reservation without deposit and cancellation without charge" %}</h6>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-12">
-          <div class="box d-flex">
+          <div class="box d-flex align-items-center">
             <i class="fa-solid fa-award"></i>
             <h6>{% trans "There are no hidden costs" %}</h6>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-12">
-          <div class="box d-flex">
+          <div class="box d-flex align-items-center">
             <i class="fa-solid fa-hourglass-half"></i>
             <h6>{% trans "Free waiting time" %}</h6>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-12">
-          <div class="box d-flex">
+          <div class="box d-flex align-items-center">
             <i class="fa-solid fa-car"></i>
             <h6>{% trans "Disinfection of cars after each guest" %}</h6>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-12">
-          <div class="box d-flex">
+          <div class="box d-flex align-items-center">
             <i class="fa-solid fa-id-card"></i>
             <h6>{% trans "Polite, punctual and experienced drivers specially trained" %}</h6>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-12">
-          <div class="box d-flex">
+          <div class="box d-flex align-items-center">
             <i class="fa-solid fa-shield-heart"></i>
             <h6>{% trans "Safe rides" %}</h6>
           </div>
