--- a/promotion/templates/contact.html
+++ b/promotion/templates/contact.html
@@ -1,117 +1,127 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 {% load static %}
 {% load i18n %}
 {% block title %}
-  <title>{% trans "Contact - Luxtripbaku a company experienced in organizing transfers and tours" %}</title>
-{% endblock title %}
+  <title>{% trans 'Contact - Luxtripbaku a company experienced in organizing transfers and tours' %}</title>
+{% endblock %}
 {% block meta_tags %}
-<meta name="description" content="LUX TRIP BAKU offers reliable, professional drivers with prices 30% lower than market rates. Choose from our fleet, enjoy on-time service, and book unforgettable tours.">
-<meta property="og:title" content="Contact Page - Luxtripbaku a company experienced in organizing transfers and tours" />
-<meta property="og:description" content="LUX TRIP BAKU offers reliable, professional drivers with prices 30% lower than market rates. Choose from our fleet, enjoy on-time service, and book unforgettable tours." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="{{request.build_absolute_uri}}" />
-<meta property="og:image" content="{% static "assets/logo.webp" %}" />
-{% endblock meta_tags %} 
+  <meta name="description" content="LUX TRIP BAKU offers reliable, professional drivers with prices 30% lower than market rates. Choose from our fleet, enjoy on-time service, and book unforgettable tours." />
+  <meta property="og:title" content="Contact Page - Luxtripbaku a company experienced in organizing transfers and tours" />
+  <meta property="og:description" content="LUX TRIP BAKU offers reliable, professional drivers with prices 30% lower than market rates. Choose from our fleet, enjoy on-time service, and book unforgettable tours." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="{{ request.build_absolute_uri }}" />
+  <meta property="og:image" content="{% static 'assets/logo.webp' %}" />
+{% endblock %}
 {% block main %}
-<main>
-  <section id="map">
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.3623909489656!2d49.87450320000001!3d40.3786602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307d5b16f03049%3A0x8b233276e2e00004!2sAzure%20Business%20Center!5e0!3m2!1saz!2saz!4v1723623357688!5m2!1saz!2saz"
-      width="100%"
-      height="450"
-      style="border: 0"
-      allowfullscreen=""
-      loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"
-    ></iframe>
-  </section>
-  <section id="contact-form">
-    <div class="container">
-      <div class="row row-gap-5">
-        <div class="col-lg-6 col-sm-12">
-          <div class="gray">
-            <div class="gray-box">
-              {% for info in infos %}
+  <main>
+    <section id="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.3623909489656!2d49.87450320000001!3d40.3786602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307d5b16f03049%3A0x8b233276e2e00004!2sAzure%20Business%20Center!5e0!3m2!1saz!2saz!4v1723623357688!5m2!1saz!2saz" width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    <section id="contact-form">
+      <div class="container">
+        <div class="row row-gap-5">
+          <div class="col-lg-6 col-sm-12">
+            <div class="gray">
+              <div class="gray-box">
+                {% for info in infos %}
                   {% if info.type == 'location' %}
-                      <h6>{% trans "Our Location" %}</h6>
-                      <p>{{ info.content }}</p>
+                    <h6>{% trans 'Our Location' %}</h6>
+                    <p>{{ info.content }}</p>
                   {% endif %}
-              {% endfor %}
-          </div>
-          
-          <div class="gray-box">
-              {% for info in infos %}
-                  {% if info.type == 'email' %}
-                      <h6>{% trans "Quick Contact" %}</h6>
-                      <p>{% trans "Email:" %} {{ info.content }}</p>
-                  {% endif %}
-              {% endfor %}
-              {% for info in infos %}
-                  {% if info.type == 'number' %}
-                      <p>{% trans "Call Us:" %} {{ info.content }}</p>
-                  {% endif %}
-              {% endfor %}
-          </div>
-            <div class="button">
-              {% for social in socials %}
-                  {% if social.platform == 'whatsapp' %}
-                      <a href="{{ social.link }}" target="_blank">
-                          <i class="fa-brands fa-whatsapp"></i> Whatsapp
-                      </a>
-                  {% endif %}
-              {% endfor %}
-          </div>
-          </div>
-        </div>
-        <div class="col-lg-6 col-sm-12">
-          <div class="form-div">
-            <h4>{% trans "Get In Touch" %}</h4>
-            <p>{% trans "Complete control over service allows us to ensure our customers receive the best quality prices and service." %}</p>
-            
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert {% if 'success' in message.tags %}alert-success{% elif 'error' in message.tags %}alert-danger{% endif %} mt-3">
-                        {{ message }}
-                        {% if 'error' in message.tags %}
-                            <ul>
-                                {% for field, errors in form.errors.items %}
-                                    {% for error in errors %}
-                                        <li>{{ error }}</li>
-                                    {% endfor %}
-                                {% endfor %}
-                            </ul>
-                        {% endif %}
-                    </div>
                 {% endfor %}
-            {% endif %}
-            
-            <form action="{% url 'promotion:contact-submit' %}" method="post">
+              </div>
+
+              <div class="gray-box">
+                {% for info in infos %}
+                  {% if info.type == 'email' %}
+                    <h6>{% trans 'Quick Contact' %}</h6>
+                    <p>
+                      {% trans 'Email:' %} {{ info.content }}
+                    </p>
+                  {% endif %}
+                {% endfor %}
+                {% for info in infos %}
+                  {% if info.type == 'number' %}
+                    <p>
+                      {% trans 'Call Us:' %} {{ info.content }}
+                    </p>
+                  {% endif %}
+                {% endfor %}
+              </div>
+              <div class="button">
+                {% for social in socials %}
+                  {% if social.platform == 'whatsapp' %}
+                    <a href="{{ social.link }}" target="_blank"><i class="fa-brands fa-whatsapp"></i> Whatsapp</a>
+                  {% endif %}
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-sm-12">
+            <div class="form-div">
+              <h4>{% trans 'Get In Touch' %}</h4>
+              <p>
+                {% trans 'Complete control over service allows us to ensure our customers receive the best quality prices and service.' %}
+              </p>
+
+              {% if messages %}
+                {% for message in messages %}
+                  <div class="alert {% if 'success' in message.tags %}
+                      alert-success
+                    {% elif 'error' in message.tags %}
+                      alert-danger
+                    {% endif %} mt-3">
+                    {{ message }}
+                    {% if 'error' in message.tags %}
+                      <ul>
+                        {% for field, errors in form.errors.items %}
+                          {% for error in errors %}
+                            <li>{{ error }}</li>
+                          {% endfor %}
+                        {% endfor %}
+                      </ul>
+                    {% endif %}
+                  </div>
+                {% endfor %}
+              {% endif %}
+
+              <form action="{% url 'promotion:contact-submit' %}" method="post">
                 {% csrf_token %}
-                <div class="d-flex gap-2">
-                    {{ form.name }}
-                    {{ form.email }}
-                </div>
-                
-                <div class="d-flex gap-2">
-                    {{ form.phone }}
-                    {{ form.website }}
-                </div>
-        
+                <div class="d-flex gap-2">{{ form.name }}
+                  {{ form.email }}</div>
+
+                <div class="d-flex gap-2">{{ form.phone }}
+                  {{ form.website }}</div>
+
                 {{ form.additional_request }}
-        
-                <button type="submit" class="btn btn-primary mt-3">
-                    <i class="fa-solid fa-circle-right"></i> {% trans "Submit Request" %}
-                </button>
-            </form>
-        </div>
-        
+
+                <button type="submit" class="btn btn-primary mt-3"><i class="fa-solid fa-circle-right"></i> {% trans 'Submit Request' %}</button>
+              </form>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-</main>
-{% endblock main %}
+    </section>
 
-
-
+    {% if owner_info %}
+      <section id="owner">
+        <div class="custom-container">
+          <div class="row row-gap-4">
+            <div class="col-md-6 col-12">
+              <img src="{{ owner_info.image.url }}" alt="Owner Image" />
+            </div>
+            <div class="col-md-6 col-12 owner-info">
+              <h1>{{ owner_info.name }}</h1>
+              <p>Mob: {{ owner_info.mobile|default:"Gizlədilib" }}</p>
+              <p>Email: {{ owner_info.email }}</p>
+              <p class="info">
+                {{ owner_info.info }}
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    {% endif %}
+  </main>
+{% endblock %}
 
