--- a/static/styles/_contact.scss
+++ b/static/styles/_contact.scss
@@ -80,3 +80,35 @@
     }
   }
 }
+
+#owner{
+  padding: 50px 0px;
+  .custom-container{
+    width: 90%;
+    margin: auto;
+    img{
+      width: 100%;
+      margin: auto;
+      display: block;
+      object-fit: contain;
+      height: 650px;
+      object-position: top;
+      @media (max-width: 991px) {
+        height: 500px;
+      }
+    }
+    .owner-info{
+      @media (max-width: 991px) {
+       text-align: center;
+      }
+      margin-top: 10px;
+      p{
+        font-size: 18px;
+        padding-top: 20px;
+      }
+      .info{
+        font-size: 15px;
+      }
+    }
+  }
+}
