guest number input changed to required field

--- a/promotion/templates/fleet.html
+++ b/promotion/templates/fleet.html
@@ -208,7 +208,7 @@
             <!-- Guests Number -->
             <div class="form-group">
               <div class="d-flex">
-                <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests' %}</label>
+                <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests*' %}</label>
                 <i class="fa-solid fa-users-line"></i>
               </div>
               {{ fleetform.guest_number }}
@@ -368,7 +368,7 @@
             <!-- Guests Number -->
             <div class="form-group">
               <div class="d-flex">
-                <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests' %}</label>
+                <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests*' %}</label>
                 <i class="fa-solid fa-users-line"></i>
               </div>
               {{ fleetform.guest_number }}
