--- a/promotion/templates/index.html
+++ b/promotion/templates/index.html
@@ -179,7 +179,7 @@
                     <!-- Guests Number -->
                     <div class="form-group">
                       <div class="d-flex">
-                        <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests' %}</label>
+                        <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests*' %}</label>
                         <i class="fa-solid fa-users-line"></i>
                       </div>
                       {{ fleetform.guest_number }}
@@ -356,7 +356,7 @@
                     <!-- Guests Number -->
                     <div class="form-group">
                       <div class="d-flex">
-                        <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests' %}</label>
+                        <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests*' %}</label>
                         <i class="fa-solid fa-users-line"></i>
                       </div>
                       {{ fleetform.guest_number }}
@@ -571,7 +571,7 @@
                 <!-- Guests Number -->
                 <div class="form-group">
                   <div class="d-flex">
-                    <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests' %}</label>
+                    <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests*' %}</label>
                     <i class="fa-solid fa-users-line"></i>
                   </div>
                   {{ fleetform.guest_number }}
@@ -737,7 +737,7 @@
                 <!-- Guests Number -->
                 <div class="form-group">
                   <div class="d-flex">
-                    <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests' %}</label>
+                    <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests*' %}</label>
                     <i class="fa-solid fa-users-line"></i>
                   </div>
                   {{ fleetform.guest_number }}
