--- a/promotion/templates/tours.html
+++ b/promotion/templates/tours.html
@@ -203,7 +203,7 @@
             <!-- Guests Number -->
             <div class="form-group">
               <div class="d-flex">
-                <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests' %}</label>
+                <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests*' %}</label>
                 <i class="fa-solid fa-users-line"></i>
               </div>
               {{ fleetform.guest_number }}
@@ -357,7 +357,7 @@
             <!-- Guests Number -->
             <div class="form-group">
               <div class="d-flex">
-                <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests' %}</label>
+                <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests*' %}</label>
                 <i class="fa-solid fa-users-line"></i>
               </div>
               {{ fleetform.guest_number }}
