google tag manager configured

--- a/promotion/templates/fleet.html
+++ b/promotion/templates/fleet.html
@@ -95,13 +95,17 @@
               <div class="alert {% if 'success' in message.tags %}
                   
                   
+                  
                   alert-success
+
 
 
                 {% elif 'error' in message.tags %}
                   
                   
+                  
                   alert-danger
+
 
 
                 {% endif %} mt-3">
@@ -273,11 +277,15 @@
             {% for message in messages %}
               <div class="alert {% if 'success' in message.tags %}
                   
+                  
                   alert-success
+
 
                 {% elif 'error' in message.tags %}
                   
+                  
                   alert-danger
+
 
                 {% endif %} mt-3">
                 {{ message }}
@@ -368,10 +376,10 @@
             <!-- Guests Number -->
             <div class="form-group">
               <div class="d-flex">
-                <label for="{{ fleetform.guest_number.id_for_label }}">{% trans 'The number of guests*' %}</label>
+                <label for="{{ tourform.guest_number.id_for_label }}">{% trans 'The number of guests*' %}</label>
                 <i class="fa-solid fa-users-line"></i>
               </div>
-              {{ fleetform.guest_number }}
+              {{ tourform.guest_number }}
             </div>
 
             <!-- Additional Request -->
