--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,6 +32,13 @@
     <link rel="icon" href="{% static "assets/favicon-32x32.png" %}" type="image/x-icon">
     {% block meta_tags %}{% endblock meta_tags %}
     {% block title %}{% endblock title %}
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-T2PMFKC3');</script>
+  <!-- End Google Tag Manager -->
   </head>
   <body>
     <section id="fixed-buttons">
@@ -309,5 +316,9 @@
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <script src="{% static "scripts/main.js" %}"></script>
+      <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T2PMFKC3"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     </body>
   </html>
