navmenu order change configured

--- a/promotion/templates/tours.html
+++ b/promotion/templates/tours.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% load i18n %}
 {% block title %}
-  <title>{% trans 'Transfers&Tours - Luxtripbaku a company experienced in organizing transfers and tours' %}</title>
+  <title>{% trans 'Azerbaijan Tours & Day Trips - Luxtripbaku a company experienced in organizing transfers and tours' %}</title>
 {% endblock %}
 {% block meta_tags %}
   <meta name="description" content="LUX TRIP BAKU offers reliable, professional drivers with prices 30% lower than market rates. Choose from our fleet, enjoy on-time service, and book unforgettable tours." />
