--- a/templates/layout.html
+++ b/templates/layout.html
@@ -158,8 +158,8 @@
           <div class="navbar">
             <ul class="list-unstyled d-flex">
               <li><a href="{% url 'promotion:home' %}">{% trans "Home" %}</a></li>
-              <li><a href="{% url 'promotion:tours' %}">{% trans "Transfers&Tours" %}</a></li>
-              <li><a href="{% url 'promotion:fleet' %}">{% trans "Fleet&Rate" %}</a></li>
+              <li><a href="{% url 'promotion:fleet' %}">{% trans "Baku Airport Transfer Rates" %}</a></li>
+              <li><a href="{% url 'promotion:tours' %}">{% trans "Azerbaijan Tours & Day Trips" %}</a></li>
               <li><a href="{% url 'blog:blog' %}">{% trans "Blog" %}</a></li>
               <li><a href="{% url 'promotion:faq' %}">{% trans "FAQ" %}</a></li>
               <li><a href="{% url 'promotion:contact' %}">{% trans "Contact Us" %}</a></li>
@@ -178,13 +178,13 @@
               </li>
               <li>
                 <div class="isopenmenu">
-                  <a href="{% url 'promotion:tours' %}">{% trans "Transfers&Tours" %}</a>
+                  <a href="{% url 'promotion:fleet' %}">{% trans "Baku Airport Transfer Rates" %}</a>
                 </div>
                 <div class="openmenu-divider-outside"></div>
               </li>
               <li>
                 <div class="isopenmenu">
-                  <a href="{% url 'promotion:fleet' %}">{% trans "Fleet&Rate" %}</a>
+                  <a href="{% url 'promotion:tours' %}">{% trans "Azerbaijan Tours & Day Trips" %}</a>
                 </div>
                 <div class="openmenu-divider-outside"></div>
               </li>
@@ -289,8 +289,8 @@
               <div class="d-flex">
                 <ul class="list-unstyled">
                   <li><a href="{% url 'promotion:home' %}">{% trans "Home" %}</a></li>
-                  <li><a href="{% url 'promotion:tours' %}">{% trans "Transfers&Tours" %}</a></li>
-                  <li><a href="{% url 'promotion:fleet' %}">{% trans "Fleet&Rate" %}</a></li>
+                  <li><a href="{% url 'promotion:fleet' %}">{% trans "Baku Airport Transfer Rates" %}</a></li>
+                  <li><a href="{% url 'promotion:tours' %}">{% trans "Azerbaijan Tours & Day Trips" %}</a></li>
                 </ul>
                 <ul class="list-unstyled" style="margin-left: 150px">
                   <li><a href="{% url 'blog:blog' %}">{% trans "Blog" %}</a></li>
