--- a/promotion/templates/fleet.html
+++ b/promotion/templates/fleet.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% load i18n %}
 {% block title %}
-  <title>{% trans 'Fleet&Rate - Luxtripbaku a company experienced in organizing transfers and tours' %}</title>
+  <title>{% trans 'Baku Airport Transfer Rates - Luxtripbaku a company experienced in organizing transfers and tours' %}</title>
 {% endblock %}
 {% block meta_tags %}
   <meta name="description" content="LUX TRIP BAKU offers reliable, professional drivers with prices 30% lower than market rates. Choose from our fleet, enjoy on-time service, and book unforgettable tours." />
