detail page naming issue resolved

--- a/promotion/templates/fleet.html
+++ b/promotion/templates/fleet.html
@@ -18,7 +18,7 @@
     <section id="fleet-upper">
       <img src="{% static 'assets/fleetupper.png' %}" alt="" />
       <div class="content">
-        <h1>{% trans 'Fleet&Rate' %}</h1>
+        <h1>{% trans 'Baku Airport Transfer Rates' %}</h1>
       </div>
       <div class="links">
         <h6>{% trans 'Transfer prices in Baku' %}</h6>
