--- a/promotion/templates/tours.html
+++ b/promotion/templates/tours.html
@@ -18,7 +18,7 @@
     <section id="tours-upper">
       <img src="{% static 'assets/tourmain.jpg' %}" alt="" />
       <div class="content">
-        <h1>{% trans 'Private Transfers&Tours' %}</h1>
+        <h1>{% trans 'Azerbaijan Tours & Day Trips' %}</h1>
         <h5>{% trans 'All photos are real' %}</h5>
       </div>
     </section>
