--- a/static/styles/_home.scss
+++ b/static/styles/_home.scss
@@ -15,7 +15,7 @@
     align-items: center;
     justify-content: center;
     margin: 10px 0px;
-    
+
     a {
       color: #fff;
       text-decoration: none;
@@ -33,8 +33,15 @@
       }
     }
   }
-  .instagradient{
-    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+  .instagradient {
+    background: linear-gradient(
+      45deg,
+      #f09433 0%,
+      #e6683c 25%,
+      #dc2743 50%,
+      #cc2366 75%,
+      #bc1888 100%
+    );
   }
 }
 
@@ -86,7 +93,7 @@
       top: 100%;
       left: 0%;
       z-index: 2000;
-      i{
+      i {
         margin-right: 5px;
       }
     }
@@ -95,12 +102,12 @@
 
 header {
   padding: 10px 0;
-  position: sticky; 
+  position: sticky;
   top: 0;
-  z-index: 1000; 
-  background-color: white; 
-  transition: top 0.3s; 
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+  z-index: 1000;
+  background-color: white;
+  transition: top 0.3s;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   .logo {
     img {
       object-fit: cover;
@@ -110,13 +117,19 @@ header {
   .navbar {
     margin: 20px 0 0 20px;
     ul {
+      align-items: center;
+      gap: 10px;
       li {
+        text-align: center;
         a {
           cursor: pointer;
-          padding: 0px 25px;
+          display: inline-flex;
           color: #1a2b48;
           font-weight: 700;
           text-decoration: none;
+          align-items: center;
+          padding: 0px 14px;
+          border-radius: 8px;
         }
       }
     }
@@ -212,7 +225,8 @@ header {
 #main-forms {
   padding: 50px 0px;
   position: relative;
-  .tour-bg,.transfer-bg {
+  .tour-bg,
+  .transfer-bg {
     position: absolute;
     top: 0;
     left: 0;
@@ -222,7 +236,7 @@ header {
     z-index: -1;
     filter: brightness(40%);
   }
-  .tour-bg{
+  .tour-bg {
     display: none;
   }
   .custom-container {
@@ -254,7 +268,7 @@ header {
         background-color: #ffffff;
         padding: 15px 40px;
         border-radius: 10px;
-        .hiddeninputs{
+        .hiddeninputs {
           display: none;
         }
 
@@ -264,11 +278,11 @@ header {
 
         .form-group {
           margin-top: 20px;
-          .flag-icon{
+          .flag-icon {
             font-size: 30px;
             display: none;
           }
-          .active{
+          .active {
             display: block;
           }
 
@@ -341,7 +355,7 @@ header {
                 &:hover {
                   background-color: #f0f0f0;
                 }
-                &:first-child{
+                &:first-child {
                   display: none;
                 }
               }
@@ -377,15 +391,15 @@ header {
       }
     }
     .leftside {
-      ul{
+      ul {
         text-decoration: none;
         margin-top: 35px;
         margin-left: 100px;
         line-height: 40px;
-        li{
+        li {
           color: white;
           font-size: 18px;
-          i{
+          i {
             margin-top: 7px;
             padding: 5px;
           }
@@ -398,10 +412,10 @@ header {
     z-index: 1;
     display: none;
     .leftside {
-      ul{
-        li{
+      ul {
+        li {
           color: white;
-          i{
+          i {
             margin-top: 5px;
             padding: 5px;
           }
@@ -431,7 +445,7 @@ header {
         border-radius: 10px;
         width: 90%;
         margin: auto;
-        .hiddeninputs{
+        .hiddeninputs {
           display: none;
         }
 
@@ -442,11 +456,11 @@ header {
         .form-group {
           margin-top: 20px;
 
-          .flag-icon{
+          .flag-icon {
             font-size: 30px;
             display: none;
           }
-          .active{
+          .active {
             display: block;
           }
 
@@ -519,7 +533,7 @@ header {
                 &:hover {
                   background-color: #f0f0f0;
                 }
-                &:first-child{
+                &:first-child {
                   display: none;
                 }
               }
@@ -568,7 +582,7 @@ header {
       font-size: 14px;
       color: #1a2b48;
       width: 50%;
-      @media (max-width: 991px){
+      @media (max-width: 991px) {
         width: 100%;
       }
     }
@@ -606,7 +620,7 @@ header {
       font-size: 14px;
       color: #1a2b48;
       width: 50%;
-      @media (max-width: 991px){
+      @media (max-width: 991px) {
         width: 100%;
       }
     }
@@ -719,7 +733,7 @@ header {
 footer {
   background-color: #f2e8d5;
   padding: 20px 0px;
-  a{
+  a {
     color: black;
     text-decoration: none;
   }
