--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -109,12 +109,22 @@ header .logo img {
 header .navbar {
   margin: 20px 0 0 20px;
 }
+header .navbar ul {
+  align-items: center;
+  gap: 10px;
+}
+header .navbar ul li {
+  text-align: center;
+}
 header .navbar ul li a {
   cursor: pointer;
-  padding: 0px 25px;
+  display: inline-flex;
   color: #1a2b48;
   font-weight: 700;
   text-decoration: none;
+  align-items: center;
+  padding: 0px 14px;
+  border-radius: 8px;
 }
 header .responsive-navbar {
   display: none;
@@ -202,7 +212,8 @@ header .responsive-openmenu .responsive-openmenu-icons a i {
   padding: 50px 0px;
   position: relative;
 }
-#main-forms .tour-bg, #main-forms .transfer-bg {
+#main-forms .tour-bg,
+#main-forms .transfer-bg {
   position: absolute;
   top: 0;
   left: 0;
